pkg/bungee-interface/src/client/snapshots/bungee_interface__client__tests__internal_error.snap
---
source: pkg/bungee-interface/src/client/tests.rs
expression: output
---
{
  "error": {
    "code": "internal",
    "reason": "internal-error",
    "message": "[bungee-interface/client] internal error",
    "data": null
  }
}
