pkg/bungee-interface/src/client/snapshots/bungee_interface__client__tests__missing_status_identifier.snap
---
source: pkg/bungee-interface/src/client/tests.rs
expression: output
---
{
  "error": {
    "code": "bad-request",
    "reason": "bungee-status-missing-identifier",
    "message": "[bungee-interface/client] missing identifier for bungee status lookup",
    "data": null
  }
}
