pkg/bungee-interface/src/client/snapshots/bungee_interface__client__tests__no_route.snap
---
source: pkg/bungee-interface/src/client/tests.rs
expression: output
---
{
  "error": {
    "code": "not-found",
    "reason": "bungee-no-route",
    "message": "[bungee-interface/client] no bungee route available",
    "data": null
  }
}
