pkg/bungee-interface/src/client/snapshots/bungee_interface__client__tests__status_input_id.snap
---
source: pkg/bungee-interface/src/client/tests.rs
expression: pairs
---
[
  [
    "id",
    "permit-id"
  ]
]
