pkg/bungee-interface/src/client/snapshots/bungee_interface__client__tests__status_input_tx_hash.snap
---
source: pkg/bungee-interface/src/client/tests.rs
expression: pairs
---
[
  [
    "txHash",
    "0xtx"
  ]
]
