pkg/bungee-interface/src/client/snapshots/bungee_interface__client__tests__status_output.snap
---
source: pkg/bungee-interface/src/client/tests.rs
expression: value
---
{
  "statuses": [
    {
      "code": 3,
      "destination_tx_hash": "0xabc",
      "label": "FULFILLED"
    }
  ]
}
